--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,116 @@
-<h2 id="title">Welcome to Ember.js</h2>
 
-{{outlet}}
+<!doctype html>
+<!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
+<html class="no-js" lang="en" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Foundation Template | Portfolio</title>
+    <meta name="description" content="Documentation and reference library for ZURB Foundation. JavaScript, CSS, components, grid and more."/>
+    <meta name="author" content="ZURB, inc. ZURB network also includes zurb.com"/>
+    <meta name="copyright" content="ZURB, inc. Copyright (c) 2015"/>
+</head>
+<body>
+<div class="row">
+    <div class="large-12 columns">
+        <div class="nav-bar right">
+            <ul class="button-group">
+                <li><a href="#" class="button">Link 1</a></li>
+                <li><a href="#" class="button">Link 2</a></li>
+                <li><a href="#" class="button">Link 3</a></li>
+                <li><a href="#" class="button">Link 4</a></li>
+            </ul>
+        </div>
+        <h1>Name/Logo/Brand</h1>
+        <hr/>
+    </div>
+</div>
+<div class="row">
+    <div class="large-12 columns">
+        <img src="http://placehold.it/1000x500&text=[banner img]">
+    </div>
+</div>
+<div class="row">
+    <hr>
+    <div class="large-8 columns">
+        <h4>About</h4>
+        <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
+        <i class="fi-social-twitter"></i>
+    </div>
+    <div class="large-4 columns">
+        <img src="http://placehold.it/400x300&text=[img]">
+    </div>
+</div>
+<div class="row">
+    <hr>
+    <div class="large-12 columns">
+        <h4>Work</h4>
+        <p>Click on each image!</p>
+        <ul class="clearing-thumbs small-block-grid-1 medium-block-grid-2 large-block-grid-4" data-clearing>
+            <li>
+                <a href="http://placehold.it/800x500&text=[img]">
+                    <img data-caption="caption here..." src="http://placehold.it/800x500&text=[img]"></a>
+            </li>
+            <li>
+                <a href="http://placehold.it/800x500&text=[img]"><img data-caption="caption 2 here..." src="http://placehold.it/800x500&text=[img]"></a>
+            </li>
+            <li>
+                <a href="http://placehold.it/800x500&text=[img]"><img data-caption="caption 3 here..." src="http://placehold.it/800x500&text=[img]"></a>
+            </li>
+            <li>
+                <a href="http://placehold.it/800x500&text=[img]"><img data-caption="caption 4 here..." src="http://placehold.it/800x500&text=[img]"></a>
+            </li>
+            <li>
+                <a href="http://placehold.it/800x500&text=[img]"><img data-caption="caption 5 here..." src="http://placehold.it/800x500&text=[img]"></a>
+            </li>
+            <li>
+                <a href="http://placehold.it/800x500&text=[img]"><img data-caption="caption 6 here..." src="http://placehold.it/800x500&text=[img]"></a>
+            </li>
+        </ul>
+    </div>
+</div>
+<div class="row">
+    <div class="large-12 columns">
+        <hr>
+        <h4>Contact Me</h4>
+        <div class="large-4 columns">
+            Email: <a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="74191134190d041b0600121b181d1b5a171b19">[email&#160;protected]</a>
+        </div>
+        <div class="large-4 columns">
+            Twitter: @twitterhandle
+        </div>
+        <div class="large-4 columns">
+            Phone: 555-555-1234
+        </div>
+    </div>
+</div>
+<footer class="row">
+    <div class="large-12 columns">
+        <hr/>
+        <div class="row">
+            <div class="large-6 columns">
+                <p>© Copyright no one at all. Go to town.</p>
+            </div>
+            <div class="large-6 columns">
+                <ul class="inline-list right">
+                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#">Link 2</a></li>
+                    <li><a href="#">Link 3</a></li>
+                    <li><a href="#">Link 4</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<script>
+    $(document).foundation();
+</script>
+<script>
+    $(document).foundation();
+
+    var doc = document.documentElement;
+    doc.setAttribute('data-useragent', navigator.userAgent);
+</script>
+</body>
+</html>
