--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -21,7 +21,7 @@
                 <li><a href="#" class="button">Link 4</a></li>
             </ul>
         </div>
-        <h1>Name/Logo/Brand</h1>
+        <h1>Hello Foundation in Ebmer</h1>
         <hr/>
     </div>
 </div>
